# HeapHop

./: .gitignore  README.md  hop.sh  index.html  package-lock.json  package.json  rules.md  taichi-dark-theme.css  taichi-light-theme.css
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/heaphop-bpf/: Cargo.toml
src-tauri/heaphop-bpf/src/: main.rs
src-tauri/heaphop-common/: Cargo.toml
src-tauri/heaphop-common/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/archive/: mod.rs  reports.rs
src-tauri/src/engine/: aggregator.rs  bpf_loader.rs  compiler.rs  concurrency.rs  footprint.rs  languages.rs  mod.rs  profiler.rs  runner.rs  sandbox.rs  types.rs  uprobes.rs
src-tauri/src/engine/runtimes/: go.rs  java.rs  mod.rs  native.rs  python.rs
src/components/shared/: ConfigModal.tsx
src/hooks/: useExperimentRunner.ts  useHeapEvents.ts
src/lib/: languages.ts  utils.ts
src/pages/Dashboard/: AnalysisPanel.tsx  ArtifactFootprintPanel.tsx  ConcurrencyPanel.tsx  Dashboard.tsx  DashboardHeader.tsx  DashboardSkeleton.tsx  FreedRatioTooltip.tsx  GCPanel.tsx  GCPanelNative.tsx  GCPanelPython.tsx  HardwareEfficiency.tsx  HeapHeatmap.tsx  HeatmapCanvas.tsx  MainGraph.tsx  SizeDistributionHistogram.tsx  ThreadHeatmap.tsx  ThreadHeatmapCanvas.tsx  index.ts
src/pages/History/: BattleArena.tsx  History.tsx  HistoryCard.tsx  HistoryHeader.tsx  index.ts
src/pages/Home/: EnvironmentInfo.tsx  Home.tsx  SystemSpecs.tsx  TheoryPills.tsx  (+2 more)
tests/: ArrayTest.java  array_test.c  array_test.go  array_test.py  array_test.rs
(+5 files in other folders)
