[package]
name = "heaphop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "heaphop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
aya = { version = "0.12", features = ["async_tokio"] }
bytes = "1.5"
aya-log = "0.2"
heaphop-common = { path = "heaphop-common", features = ["user"] }
tokio = { version = "1", features = ["full"] }
rlimit = "0.11.0"
libc = "0.2.182"
regex = "1.12.3"

[workspace]
members = [
    ".",
    "heaphop-bpf",
    "heaphop-common"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
